--- a/_variables.scss
+++ b/_variables.scss
@@ -23,7 +23,7 @@ $navbar-fg: $secondary;
   border: 0.05px solid #0c131d;
   border-radius: 0.25rem;
   transition: ; transform 0.20 ease-out, box-shadow 0.20 ease-out;
-}
+};
 .card:hover {
   transform: translateY(-10px);
   box-shadow: 0 0 12.5px 7px rgba(255, 255, 255, 0.2);
