--- a/_variables.scss
+++ b/_variables.scss
@@ -1,31 +1,41 @@
+/*-- scss: defaults --*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
 
-/*-- scss: defaults --*/
-$primary: #0c131d;
-$secondary: #F8F8FF;
-$tertiary: #D3AF37;
+$primary: #c0c0c0;
+$secondary: #0c131d;
+$tertiary: #0836C1;
 $success: #50C878;
 $danger: #C21807;
 
 
 $body-bg: $primary;
-$body-color: #c0c0c0;
+$body-color: #0c131d;
 $link-color: $tertiary;
+$navbar-bg: $primary;
+$navbar-fg: $secondary;
 
 $font-family-sans-serif: "Roboto Flex", sans-serif;
 $headings-color: $secondary;
 
-$navbar-bg: #0e1723;
+$navbar-bg: #c0c0c0;
 $navbar-fg: $secondary;
 
+$enable-smooth-scroll: true !default;
+
+
+
+/*-- scss:rules --*/
 .card {
   box-shadow: 0 0 10px 1px rgba(255, 255, 255, 0.3);
   border: 0.05px solid #0c131d;
   border-radius: 0.25rem;
-  transition: ; transform 0.20 ease-out, box-shadow 0.20 ease-out;
-};
+  transition: transform 0.2s ease-out, box-shadow 0.2s ease-out;
+}
 .card:hover {
   transform: translateY(-10px);
   box-shadow: 0 0 12.5px 7px rgba(255, 255, 255, 0.2);
 }
 
+.navbar {
+border-bottom: 2px dashed #0c131d ;
+}
